# IS469_wealth_manager_project

./: .env.example  .gitattributes  .gitignore  LIVE_DATA_SETUP.md  MCP_SERVER_SETUP.md  README.md  audit_rag_outputs.py  generate_audit_csv.py  generate_final_csv.py  langgraph.json  main.py  mcp_http_server.py  mcp_server.py  pyproject.toml  reprint_tables.py  requirements.txt  test_auditor_enhanced.py  test_env.py  test_mcp_rag_integration.py  test_mcp_server.py  verify_setup.py
.langgraph_api/: .langgraph_ops.pckl
JJ/: README.md  aapl_10k_chunks.jsonl  data_download.py  rag.py  retriever.py  simple_rag.py
JJ/data/: manual_qa_template.jsonl
JJ/experiments/: rag_compare.py  rag_compare_chroma.py  rag_compare_rerank.py  rag_compare_with_mcp.py
agents/: analyst.py  auditor.py  market_context.py  metrics_judge.py  orchestrator.py  portfolio.py  report_generator.py  sentiment.py  sentiment_agent.py
backend/: mcp_http_server.py  server.py
dataset_creation_langfuse/: create_sentiment_ds.py
docs/: AUDITOR_IMPLEMENTATION.md  MCP_HTTP_SETUP.md  RAG_AUDITOR_GUIDE.md
experiments/architecture_workflow/: qualitative_experiment.py  results.json  workflow_experiment.py
experiments/auditor_agent/: run_benchmarks.py  test_context_variants.py
experiments/market_context_agent/: README.md  market_context_comparison.py  market_context_comparison_refactored.py  test_agent.py  test_full_workflow.py  test_market_context_node.py
experiments/report_generator_agent/: Report_Generation_Experiment.ipynb  qualitative_analysis.py
experiments/sentiment_agent/: IndivAssignmtCode.ipynb  create_sentiment_ds.py  finbert.ipynb  fingpt sentiment-gss.ipynb  llama3.2_3b-instruct.ipynb  llama3.2_3b.ipynb  qwen2.5-3b-instruct.ipynb  test_sentiment_model_load.ipynb
frontend/: index.html
graph/: state.py  workflow.py
graph/architecture_experiment/: conditional_workflow.py  orchestrator_workflow.py  sequential_workflow.py  state.py
graph/auditor_experiment/: agent_state.py  baseline_graph.py  iterative_graph.py  oneshot_graph.py
mcp_news/: MCP_LIVE_NEWS_SETUP.md  README.md  __init__.py  dispatcher.py  implementations.py  tools.py
rag/: RAG_Comprehensive_Analysis.md  README.md  rag.py  simple_rag.py
rag/data/: manual_qa_template.jsonl
rag/experiments/: answer_comparison.py  rag_compare.py  rag_compare_chroma.py  rag_compare_rerank.py  rag_compare_with_mcp.py
results/: all_results_comparison.csv  rag_answer_comparison.csv
results/auditor_compare.py/: audit_summary.csv  rag_audit_report.json
results/context_variant_experiment/: context_variant_results.csv
results/rag_compare/: all_variants_comparison.csv  all_variants_comparison.json  comparison_summary.csv  comparison_summary.json
results/rag_compare_mcp/: baseline_details.jsonl  comparison_summary.csv  comparison_summary.json
results/rag_compare_ragas/: baseline_details.jsonl  comparison_summary.csv  comparison_summary.json  finance_details.jsonl  hybrid_details.jsonl  hyde_details.jsonl
results/rag_compare_ragas_all/: baseline_details.jsonl  comparison_summary.csv  comparison_summary.json  finance_details.jsonl  hybrid_details.jsonl  hyde_details.jsonl
results/rag_compare_ragas_baseline/: comparison_summary.csv  comparison_summary.json
results/rag_compare_ragas_rerank/: baseline+rerank_details.jsonl  comparison_summary.csv  comparison_summary.json  finance+rerank_details.jsonl  hybrid+rerank_details.jsonl  hyde+rerank_details.jsonl
results/rag_compare_rerank_cross_encoder(old_version)/: baseline+rerank_details.jsonl  comparison_summary.csv  comparison_summary.json  finance+rerank_details.jsonl  hybrid+rerank_details.jsonl  hyde+rerank_details.jsonl
scripts/: check_reranking.py  data_ingestion.py  verify_setup.py
tests/: test_http_server.py  test_mcp_rag_integration.py
(+71 files in other folders)
