[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "is469-wealth-manager"
version = "0.1.0"
description = "IS469 Wealth Manager — Sentiment Analysis & Portfolio Agents"
requires-python = ">=3.10"
dependencies = [
    # ── Core ML ───────────────────────────────────────────────────────────────
    "torch>=2.1.0",
    "transformers==4.56.2",
    "datasets==4.3.0",
    "huggingface-hub>=0.34.0",
    "hf-transfer",
    "sentencepiece",
    "protobuf",
    "accelerate",
    "peft",
    # ── QLoRA / unsloth fine-tuning ───────────────────────────────────────────
    "unsloth",
    "bitsandbytes",
    "trl==0.22.2",
    # ── Evaluation & data science ─────────────────────────────────────────────
    "scikit-learn",
    "pandas",
    "numpy",
    "matplotlib",
    "tqdm",
    # ── Observability ─────────────────────────────────────────────────────────
    "langfuse",
    # ── Environment / notebook utils ──────────────────────────────────────────
    "python-dotenv",
    "ipywidgets",
    "jupyter",
    "langgraph>=1.1.3",
    "yfinance>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain>=1.2.13",
]

[tool.uv]
# Pin exact versions for reproducibility where needed
override-dependencies = [
    "transformers==4.56.2",
    "trl==0.22.2",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "graph"]

[tool.uv.sources]
# unsloth requires a special index on Colab/CUDA environments;
# locally uv will pull from PyPI (CPU build for dev, GPU on Colab)
